--- a/public/ueditor/themes/default/css/ueditor.css
+++ b/public/ueditor/themes/default/css/ueditor.css
@@ -229,7 +229,7 @@ div.edui-box {
 .edui-default .edui-editor-breadcrumb span {
     cursor: pointer;
     text-decoration: underline;
-    color: #19aa8d;
+    color:#2e84f6;
 }
 
 .edui-default .edui-toolbar .edui-for-fullscreen {
