--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,11 @@
 @import './-resize.scss';
 @import './-public.scss';
 @import './-layout.scss';
-
+@import './ArticleIndex.scss';
+@import './WebsiteList.scss';
+@import './WebserverList.scss';
+@import './Article.scss';
+@import './Chinaphone.scss';
 .page-root{
   position: absolute;
   left:0;
@@ -31,14 +35,15 @@
     }
   }
 }
-
-
 .scroll-panel{
   width: 100%;
   height: 100%;
   padding: 15px;
-  overflow-y:auto;
   overflow-x: hidden;
+  overflow-y: scroll;
+  &::-webkit-scrollbar {width: 4px;height: 1px;}
+  &::-webkit-scrollbar-thumb {box-shadow: inset 0 0 1px #f3f3f3;background: #9b9b9b;}
+  &::-webkit-scrollbar-track {background: #fff;}
 }
 .svg-icon{
   vertical-align: middle;
@@ -54,6 +59,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  background:none!important;
+  box-shadow:none!important;
+  border:0px!important;
   .card-header{
     .el-button{
       i,span{
@@ -67,11 +75,15 @@
     }
   }
   .el-card__header{
-    padding: 10px;
+    padding:10px 20px;
+    background:#fff;
+    margin-bottom:20px;
+    border-radius:4px;
   }
   .el-card__body{
     flex:1;
-    padding: 15px;
+    padding:0px;
+    background:#fff;
     display: flex;
     flex-direction: column;
     .card-content{
@@ -209,156 +221,196 @@
 /** 自定义表格 **/
 .border-wrap{
   display: block;
-  border: 1px solid $border;
-  overflow: hidden;
   .border-row{
       width: 100%;
-      .border-cell+.border-cell{
-          border-left:1px solid $border
-      }
-  }
-  .border-row+.border-row{
-      border-top: 1px solid $border;
   }
 }
 .post-class{
   .border-row{
     .border-cell{
-      padding: 5px;
+      padding:10px 0px;
     }
   }
   .txt-font.border-cell{
-    width: 140px;
+    width:100px;
     padding-right: 10px;
     text-align: right;
-    font-weight: bold;
-    line-height: 42px;
+    font-weight:normal;
+    line-height:32px;
+    color:#1a1a1a;
+    font-size:15px;
+  }
+  .flex-content{
+      .el-button--primary.is-plain{
+          color:#4c4c4c;
+          background:none;
+          border:none;
+          padding:9px 15px;
+          font-size:14px;
+          &:active {
+              border-color:#136add!important;
+              background:#136add!important;
+              background:-moz-linear-gradient(135deg, #2e84f6 0%, #136add 100%)!important;
+              background:-webkit-linear-gradient(135deg, #2e84f6 0%, #136add 100%)!important;
+              background:-o-linear-gradient(135deg, #2e84f6 0%, #136add 100%)!important;
+              background:-ms-linear-gradient(135deg, #2e84f6 0%, #136add 100%)!important;
+              background:linear-gradient(135deg, #2e84f6 0%, #136add 100%)!important;
+              color:#FFFFFF!important;
+              outline:none;
+          }
+          &.is-active,&:hover,&:focus{
+          border-color: #2e84f6!important;
+          background:#2e84f6!important;
+          color: #FFFFFF!important;
+          }
+      }
   }
   .tag-panel{
       width: 100%;
       overflow: hidden;
       font-size:0;
-      .el-button{
-          margin: 5px;
+      .el-button.search{
+          margin:0px;
           vertical-align: top;
+          background:#2e88ff;
+          font-size: 16px;
+          .searchWhite{
+            width: 16px;
+            height: 15px;
+            vertical-align: top;
+            display: inline-block;
+            margin-right:5px;
+            .svg-icon{
+              width:100%!important;
+              height:100%!important;
+            }
+          }
       }
-      .el-button+.el-button{
+      .el-button{
         margin-left:5px!important;
       }
   }
 }
-.post-tag{
-  .border-row{
-    .border-cell{
-      padding: 8px;
+/*buttonOne*/
+.buttonOne{
+    .el-button.el-button--primary.is-plain{
+        font-size:13px;
+        color:#666;
+        background:#f1f3f6;
+        border-color:#f1f3f6!important;
+        border-radius:2px;
+        margin-right:6px;
+        margin-bottom:6px;
+        margin-top:0px;
+        margin-left:0px;
+        padding:3px 15px;
+        line-height:24px;
+        &.is-active,&:hover,&:focus{
+            border-color:#2e84f6!important;
+            background:#2e84f6;
+            color:#FFFFFF!important;
+        }
     }
+}
+/*buttonTwo*/
+.buttonTwo{
+  .checkbox-panel{
+    clear:both;
+    display:block;
   }
-  .txt-font.border-cell{
-    width: 140px;
-    padding-right: 10px;
-    text-align: right;
-    font-weight: bold;
-    line-height: 28px;
-  }
-  .tag-panel{
-      width: 100%;
-      overflow: hidden;
-      font-size:0;
-      .el-tag{
-          margin: 2px;
-          vertical-align: top;
-          cursor: pointer;
-          transition: all 1s;
-          &:hover{
-            border-radius: 24px!important;
-            opacity: .8;
+  .el-checkbox{
+      border-color:#e6e6e6 !important;
+      border-radius:2px!important;
+      margin-right:6px!important;
+      margin-bottom:6px!important;
+      margin-top:0px!important;
+      margin-left:0px!important;
+      padding:5px 15px 5px 10px!important;
+      line-height:20px;
+      .el-checkbox__label{
+          line-height:20px;
+          font-size:14px;
+          color:#666;
+      }
+      .el-checkbox__input{
+          .el-checkbox__inner{
+              position:relative;
+              border-color:#e6e6e6;
+              &:after{
+                 transition: transform 0.15s ease-in 0s;
+              }
           }
-          &.is-active{
-            border-radius: 24px!important;
+          &.all-select{
+            .is-indeterminate{
+              background-color:#2e84f6 !important;
+              border-color:#2e84f6 !important;
+            }
           }
+      }
+      &.is-checked,&:hover,&:focus{
+          border-color:#2e84f6 !important;
+          .el-checkbox__label{
+              color:#2e84f6;
+          }
+          .el-checkbox__input{
+                  .el-checkbox__inner{
+                      background-color:#2e84f6;
+                      border-color:#2e84f6;
+                      &:after{
+                          box-sizing:content-box;
+                          content:"";
+                          border:1px solid #FFFFFF;
+                          border-left:0;
+                          border-top:0;
+                          height:7px;
+                          width:3px;
+                          left:3px;
+                          top:0px;
+                          transform:rotate(45deg) scaleY(1);
+                      }
+                  }
+          }
+      }
+      &.is-disabled{
+          border-color:#e6ebf5;
+          cursor:not-allowed;
+          .el-checkbox__input.is-disabled{
+              .el-checkbox__inner{
+                  background-color:#edf2fc;
+                  border-color:#DCDFE6;
+                  cursor:not-allowed;
+                  &:after {
+                      cursor:not-allowed;
+                      border:0px;
+                  }
+              }
+              & + span.el-checkbox__label{
+                  color:#C0C4CC;
+                  cursor:not-allowed;
+              }
+          }
+          &.is-checked,&:hover,&:focus{
+              border-color:#DCDFE6!important;
+              .el-checkbox__input.is-disabled{
+                  .el-checkbox__inner{
+                      &:after {
+                          display:none;
+                      }
+                  }
+              }
+          }
+      }
+      &.is-bordered.el-checkbox--mini{
+        line-height: 16px;
       }
   }
 }
 .el-button--primary.is-plain.is-active{
-  background: #17997f!important;
-  border-color: #17997f!important;
+  border-color: #2e84f6!important;
+  background:#2e84f6;
   color: #FFFFFF!important;
 }
 
-.depart-ul{
-  width: 100%;
-  overflow: hidden;
-  .item-depart{
-      border: 1px solid $primaryBorder;
-      overflow: hidden;
-      margin-bottom: 50px;
-      h4{
-          width: 100%;
-          overflow: hidden;
-          padding: 10px;
-          text-align: center;
-          font-size: 16px;
-          line-height: 1.2;
-          margin:0;
-          color: $menuActiveText;
-      }
-      .clerk-ul{
-          width: 100%;
-          &:after{
-              content:'';
-              display: block;
-              width: 100%;
-              clear:both;
-          }
-          .item-clerk{
-              width: 110px;
-              float:left;
-              border-right: 1px solid $primaryBorder;
-              dt{
-                  width: 100%;
-                  padding: 15px 0;
-                  font-size: 14px;
-                  line-height: 1.2;
-                  text-align: center;
-                  font-weight: normal;
-                  position: relative;
-                  &:before{
-                      content:'';
-                      display: block;
-                      width: 4000%;
-                      height: 1px;
-                      background: $primaryBorder;
-                      position: absolute;
-                      left:0;
-                      top:0;
-                  }
-              }
-              dd{
-                  width: 100%;
-                  padding: 12px 0;
-                  position: relative;
-                  span{
-                      display: block; 
-                      width: 90px; 
-                      margin: 0 auto; 
-                      height: 24px; 
-                      font-size: 0;
-                  }
-                  &:before{
-                      content:'';
-                      display: block;
-                      width: 4000%;
-                      height: 1px;
-                      background: $primaryBorder;
-                      position: absolute;
-                      left:0;
-                      top:0;
-                  }
-              }
-          }
-      }
-  }
-}
 
 .el-popover{
   min-width: 100px!important;
@@ -372,22 +424,6 @@
 }
 .el-message.is-closable .el-message__content{
   padding-right: 24px!important;
-}
-.table-title {
-  padding: 5px 0;
-  span b{
-    color: red;
-    font-weight: bold;
-  }
-}
-.el-table--medium td{
-  // padding: 5px 0!important;
-}
-.table-button{
-  line-height:0;
-  .el-button{
-    margin: 0 5px!important;
-  }
 }
 .v-md-editor__toolbar{
   &:before,&:after{
@@ -448,8 +484,83 @@
 .el-backtop{
   z-index: 1000!important;
 }
-
-
+/**/
+.clues-title{
+  width: 100%;
+  text-align: center;
+  border:0px;
+  border-bottom: none;
+  line-height: 48px;
+  height: 49px;
+  font-size: 20px;
+  font-weight: normal;
+  color:#2e84f6;
+  span{
+      strong{
+          color: #E88401;
+          margin: 0 2px;
+      }
+  }
+}
+/*表格样式*/
+.el-table.SiteTable{
+  &:before{display: none;}
+  th.is-leaf{
+    background: #e2e9ed;
+    font-size: 14px;
+    color: #555;
+    font-weight: normal;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    border-bottom: 1px solid #e2e9ed;
+    border-right: 1px solid #dae4e9;
+    line-height: 20px;
+  }
+  td{
+    border-bottom: 1px solid #f7f9fa !important;
+    border-right: 1px solid #f7f9fa !important;
+    font-size: 13px !important;
+    color: #1a1a1a;
+    padding-top: 12px !important;
+    padding-bottom: 12px !important;
+  }
+  &.el-table--scrollable-x{
+      .el-table__body-wrapper{
+          overflow-x: scroll;
+          &::-webkit-scrollbar {width:1px;height:5px;}
+          &::-webkit-scrollbar-thumb {box-shadow: inset 0 0 1px #f3f3f3;background: #9b9b9b;}
+          &::-webkit-scrollbar-track {background: #fff;}
+      }
+  } 
+  &.el-table--scrollable-y{
+      .el-table__body-wrapper{
+          overflow-y:scroll;
+          &::-webkit-scrollbar {width:5px;height:5px;}
+          &::-webkit-scrollbar-thumb {box-shadow:inset 0 0 1px #f3f3f3;background:#9b9b9b;}
+          &::-webkit-scrollbar-track {background:#fff;}
+      }
+  }
+  svg,i[class~="el-cion"]{
+    font-size: 20px;
+  }
+  ::v-deep .el-table__placeholder{
+    display: none!important;
+  }
+  ::v-deep .el-table__expand-icon{
+    display: none!important;
+  }
+  .article-title{
+    cursor: pointer;
+    padding-left:10px;
+  }
+}
+/**/
+.el-textarea__inner,.el-select__input,.el-input__inner{
+  &:focus{
+      border-color:#2e84f6!important;
+  }
+}
+.clearfix:after{content:"."; display:block; height:0; clear:both; visibility:hidden; font-size:0px; }
 @media (max-width:1024px) {
   .login-form{
     >p{
