--- a/src/styles/-public.scss
+++ b/src/styles/-public.scss
@@ -18,3 +18,10 @@
 .flex-row{
     flex-direction: row;
 }
+.abs-panel{
+    position: absolute;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+}
