--- a/src/styles/-variables.scss
+++ b/src/styles/-variables.scss
@@ -11,7 +11,7 @@ $border: #dfe4ed;
 $primaryBorder: #a3ddd1;
 // sidebar
 $menuText:#bfcbd9;
-$menuActiveText:#19aa8d;
+$menuActiveText:#2e88ff;
 $subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
 
 $menuBg:#20222A;
