--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,7 +12,7 @@
 @import './-layout.scss';
 @import './ArticleIndex.scss';
 @import './WebsiteList.scss';
-@import './WebserverList.scss';
+@import './-WebserverList.scss';
 @import './Article.scss';
 @import './Chinaphone.scss';
 .page-root{
@@ -22,7 +22,7 @@
   width:100%;
   height:100%;
   overflow: hidden;
-  padding: 15px;
+  padding: 20px;
   .el-dialog__body{
     padding: 20px!important;
   }
@@ -38,12 +38,9 @@
 .scroll-panel{
   width: 100%;
   height: 100%;
-  padding: 15px;
+  padding: 20px;
   overflow-x: hidden;
-  overflow-y: scroll;
-  &::-webkit-scrollbar {width: 4px;height: 1px;}
-  &::-webkit-scrollbar-thumb {box-shadow: inset 0 0 1px #f3f3f3;background: #9b9b9b;}
-  &::-webkit-scrollbar-track {background: #fff;}
+  overflow-y: auto;
 }
 .svg-icon{
   vertical-align: middle;
@@ -54,6 +51,7 @@
 .box-card.comment{
   margin-top: 15px;
 }
+.bg-white{background-color: #fff;}
 .box-card{
   width: 100%;
   height: 100%;
@@ -70,25 +68,25 @@
     }
   }
   &.scroll-card{
-    .el-card__body{
-      padding:0;
-    }
+    height:auto;
   }
   .el-card__header{
-    padding:10px 20px;
+    padding:20px;
     background:#fff;
     margin-bottom:20px;
-    border-radius:4px;
+    border-radius:8px;
+    border:none;
   }
   .el-card__body{
     flex:1;
     padding:0px;
-    background:#fff;
+    background:none;
     display: flex;
     flex-direction: column;
     .card-content{
       flex:1;
       overflow: hidden;
+      border-radius: 8px;
     }
   }
   .pagination-panel{
@@ -504,6 +502,7 @@
 }
 /*表格样式*/
 .el-table.SiteTable{
+  border-radius: 8px;
   &:before{display: none;}
   th.is-leaf{
     background: #e2e9ed;
@@ -524,22 +523,6 @@
     padding-top: 12px !important;
     padding-bottom: 12px !important;
   }
-  &.el-table--scrollable-x{
-      .el-table__body-wrapper{
-          overflow-x: scroll;
-          &::-webkit-scrollbar {width:1px;height:5px;}
-          &::-webkit-scrollbar-thumb {box-shadow: inset 0 0 1px #f3f3f3;background: #9b9b9b;}
-          &::-webkit-scrollbar-track {background: #fff;}
-      }
-  } 
-  &.el-table--scrollable-y{
-      .el-table__body-wrapper{
-          overflow-y:scroll;
-          &::-webkit-scrollbar {width:5px;height:5px;}
-          &::-webkit-scrollbar-thumb {box-shadow:inset 0 0 1px #f3f3f3;background:#9b9b9b;}
-          &::-webkit-scrollbar-track {background:#fff;}
-      }
-  }
   svg,i[class~="el-cion"]{
     font-size: 20px;
   }
@@ -552,12 +535,6 @@
   .article-title{
     cursor: pointer;
     padding-left:10px;
-  }
-}
-/**/
-.el-textarea__inner,.el-select__input,.el-input__inner{
-  &:focus{
-      border-color:#2e84f6!important;
   }
 }
 .clearfix:after{content:"."; display:block; height:0; clear:both; visibility:hidden; font-size:0px; }
