--- a/src/styles/-variables.scss
+++ b/src/styles/-variables.scss
@@ -3,15 +3,15 @@ $blue:#4c54fe;
 $light-blue:#3A71A8;
 $red:#C03639;
 $pink: #E65D6E;
-$green: #30B08F;
-$tiffany: #4AB7BD;
+$green: #2e9cf6;
+$tiffany: #2e4cf6;
 $yellow:#FEC171;
-$panGreen: #30B08F;
+$panGreen: #1a6fdf;
 $border: #dfe4ed;
 $primaryBorder: #a3ddd1;
 // sidebar
 $menuText:#bfcbd9;
-$menuActiveText:#2e88ff;
+$menuActiveText:#2e84f6;
 $subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
 
 $menuBg:#20222A;
